commit 9: visualizar concertado, e campo de upload de imagem no editar melhorado - 28/06/2025 - 00:00

--- a/src/app/recursos/materiais/materiais.component.scss
+++ b/src/app/recursos/materiais/materiais.component.scss
@@ -19,8 +19,16 @@
 }
 
 /* Padding ajustado para o rótulo */
-.label {
-    padding-top: -30px;
+label {
+  margin-top: 10px; /* 16px, por exemplo */
+  display: block;
+  font-weight: bold;
+}
+
+label.label-visualizar {
+  margin-bottom: 5px; /* 16px, por exemplo */
+  display: block;
+  font-weight: bold;
 }
 
 /* Estilos gerais para inputs, textareas, selects e p-inputnumber */
