commit 10: correção de pequenos bugs, como atualização de qr code e enviar imagem - 30/06/2025 - 20:06

--- a/src/app/recursos/materiais/materiais.component.html
+++ b/src/app/recursos/materiais/materiais.component.html
@@ -46,7 +46,10 @@
   [globalFilterFields]="['nome', 'situacao', 'patrimonio', 'setor.nome', 'categoria.nome', 'origem.nome']"
   currentPageReportTemplate="Mostrando de {first} até {last} de {totalRecords} materiais"
   [showCurrentPageReport]="true"
-  [responsiveLayout]="'scroll'">
+  [responsiveLayout]="'scroll'"
+  (onPage)="regenerarQrCodes()"
+  (onSort)="regenerarQrCodes()"
+  (onFilter)="regenerarQrCodes()">
 
   <ng-template #caption>
     <div class="flex items-center justify-between">
