commit 11: adição de marca e algumas correções - 18:34 - 08/07/2025

--- a/src/app/recursos/auth/login/login.component.scss
+++ b/src/app/recursos/auth/login/login.component.scss
@@ -1,5 +1,11 @@
 
 .teste2 {
-    color: red;
+    color: blue;
     background-color: antiquewhite;
+}
+
+/* Força a largura do input interno do p-password */
+:host ::ng-deep .p-password input {
+  width: 100% !important;
+  box-sizing: border-box;
 }
