commit 12: Atualização de Segurança - 15/07/2025 - 17:34

--- a/src/app/core/teste-conexao/material-teste/material-teste.component.html
+++ b/src/app/core/teste-conexao/material-teste/material-teste.component.html
@@ -1,4 +1,6 @@
-<div>
-  <h2>B1</h2>
-  <p>{{ mensagem }}</p>
+<!-- Conteúdo normal da página aqui -->
+
+<!-- Mensagem discreta para dev -->
+<div class="debug-status" *ngIf="mensagem" [title]="mensagem">
+  {{ mensagem }}
 </div>
