--- a/src/app/recursos/materiais/materiais.component.html
+++ b/src/app/recursos/materiais/materiais.component.html
@@ -106,8 +106,8 @@
     />
   </td>
   <td>{{ material.patrimonio }}</td>
-  <td>{{ material.setor?.nome || 'Setor não definido' }}</td>,
   <td>{{ material.marca?.nome || 'Marca não definido' }}</td>
+  <td>{{ material.setor?.nome || 'Setor não definido' }}</td>
   <td>{{ material.categoria?.nome || 'Categoria não definida' }}</td>
   <td>{{ material.origem?.nome || 'Origem não definida' }}</td>
   <td>
@@ -591,4 +591,4 @@
   <div id="qr-ampliado" style="margin: auto; width: 600px; height: 600px"></div>
 </p-dialog>
 
-
+<app-material-teste></app-material-teste>
